There is an issue with the way Safari handles CSS visibility: hidden and child elements with visibility: unset.  Hoping that this change will make the visibility behavior more cross browser compatible.
* web/lib/main.js:
    - Visibility is now handled by the class 'hidden'.  Now all calls to unset
      visibility CSS calls have been changed to removeClass 'hidden' calls and
      all set visibiliy hidden CSS calls have been changed to addClass
      'hidden' calls.

* web/stylesheets/main.css:
    - Added the .hidden CSS to handle the visibility: hidden statements.
    - Removed all other visibility: hidden statements.

* web/views/display-html.html:
    - Adding class hidden to #html-results so it's hidden by default.

* web/views/summary-instructions.html:
    - Adding class hidden to #summary so it's hidden by default.

* web/views/summary.html:
    - Adding class hidden to #summary-table so it's hidden by default.

--- a/web/stylesheets/main.css
+++ b/web/stylesheets/main.css
@@ -56,13 +56,12 @@ div.layout-code {
     overflow: auto;
 }
 
-div.summary {
-    margin: 10px 0px 0px;
+.hidden {
     visibility: hidden;
 }
 
-div.summary-table {
-    visibility: hidden;
+div.summary {
+    margin: 10px 0px 0px;
 }
 
 .summary table {
@@ -99,6 +98,4 @@ div.code {
     overflow: auto;
     overflow-wrap: break-word;
     word-wrap: break-word;
-
-    visibility: hidden;
 }
